<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.phamvannguyen.freshie.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.phamvannguyen.freshie.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.phamvannguyen.freshie.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.phamvannguyen.freshie.categories.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_cart" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_Recommend"-->
<!--        android:name="com.phamvannguyen.freshie.recommend.RecommendFragment"-->
<!--        android:label="@string/title_recommend"-->
<!--        tools:layout="@layout/fragment_recommend" />-->
</navigation>