<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".product.ListProductActivity"
    android:orientation="vertical">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_title"
            android:textAppearance="@style/white_title"
            android:textColor="@color/color_custom_pink"
            android:gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/btn_Skincare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_radius_pink"
                app:backgroundTint="@color/color_custom_blue"
                android:text="@string/skin_care"
                android:padding="0dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/btn_HairCare"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_radius_pink"
                app:backgroundTint="@color/color_custom_blue"
                android:text="@string/hair_care"
                android:padding="0dp"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/btn_Makeup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="0dp"
                android:background="@drawable/border_radius_pink"
                app:backgroundTint="@color/color_custom_blue"
                android:text="@string/makeup"
                android:layout_marginRight="5dp"/>
            <Button
                android:id="@+id/btn_Perfume"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_radius_pink"
                app:backgroundTint="@color/color_custom_blue"
                android:text="@string/perfume"
                android:padding="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_filtering"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginVertical="10dp"
                android:weightSum="4"
                >

                <Button
                    android:id="@+id/btn_outstanding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#E8E8E8"
                    android:text="Nổi bật"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="0dp"
                    android:layout_marginEnd="5dp"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btn_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:backgroundTint="#E8E8E8"
                    android:text="Mới nhất"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:padding="0dp"
                    android:layout_marginEnd="5dp"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btn_bestseller"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:padding="0dp"
                    app:backgroundTint="#E8E8E8"
                    android:text="Bán chạy"
                    android:textColor="@color/black"
                    android:layout_marginRight="5dp"
                    android:textAllCaps="false" />

                <LinearLayout
                    android:id="@+id/btn_price"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="0dp"
                    android:orientation="horizontal"
                    android:background="@drawable/shape_blue"
                    android:layout_marginRight="5dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Giá"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:padding="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:gravity="center"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:src="@drawable/ic_baseline_arrow_downward_24"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gv_ListProduct"
            android:numColumns="2"
            android:horizontalSpacing="3dp"
            android:verticalSpacing="3dp"
            android:padding="10dp" />
        <TextView
            android:id="@+id/txt_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Không có sản phẩm nào"
            android:textSize="20sp"
            android:drawableTop="@drawable/no_results"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:visibility="invisible"/>

    </FrameLayout>

</LinearLayout>
</FrameLayout>